# common

./: .clangd  .gitignore  BUILD  CMakeLists.txt  CMakePresets.json  README.md  Taskfile.yml  WORKSPACE
include/common/: bits.hpp  result.hpp  snprintf.hpp  traits.hpp  types.hpp
tests/: CMakeLists.txt  compile_test.cpp  test_bits.cpp  test_result.cpp
